--- a/reactortest/pom.xml
+++ b/reactortest/pom.xml
@@ -5,6 +5,19 @@
     <artifactId>reactortest</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
 
@@ -50,8 +63,8 @@
             <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
-        
-    
+
+
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
@@ -66,6 +79,11 @@
             <groupId>io.projectreactor.addons</groupId>
             <artifactId>reactor-adapter</artifactId>
             <version>3.0.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor.kafka</groupId>
+            <artifactId>reactor-kafka</artifactId>
+            <version>1.0.0.M2</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.paho</groupId>
