--- a/rcomp-examples/pom.xml
+++ b/rcomp-examples/pom.xml
@@ -24,28 +24,30 @@
         <dependency>
             <groupId>io.projectreactor.addons</groupId>
             <artifactId>reactor-extra</artifactId>
-            <version>3.0.7.RELEASE</version>
+            <version>${reactor.version}</version>
         </dependency>
         <dependency>
             <groupId>io.projectreactor.addons</groupId>
             <artifactId>reactor-adapter</artifactId>
-            <version>3.0.7.RELEASE</version>
+            <version>${reactor.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-client</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>${cxf.version}</version>
         </dependency>
         
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>8.1.15.v20140411</version>
+            <version>${jetty.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-            <version>8.1.15.v20140411</version>
+            <version>${jetty.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
