--- a/rcomp-app/pom.xml
+++ b/rcomp-app/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>rcomp-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>rcomp-index</artifactId>
+	<artifactId>rcomp-app</artifactId>
 
 	<properties>
 		<rcomp.version>${project.version}</rcomp.version>
