--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>rcomp-eventadmin</module>
 		<module>rcomp-mqtt</module>
 		<module>rcomp-mail</module>
+		<module>rcomp-kafka</module>
 		<module>rcomp-examples</module>
 		<module>rcomp-app</module>
 	</modules>
