--- a/rcomp-examples-main/rcomp-examples/pom.xml
+++ b/rcomp-examples-main/rcomp-examples/pom.xml
@@ -6,6 +6,7 @@
         <groupId>net.lr.reactive.component</groupId>
         <artifactId>rcomp-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>rcomp-examples</artifactId>
     <!-- <repositories> <repository> <id>spring-milestones</id> <url>http://repo.spring.io/milestone</url> 
