--- a/rcomp-mqtt/pom.xml
+++ b/rcomp-mqtt/pom.xml
@@ -25,6 +25,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>rcomp-mqtt</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>net.lr.reactive.component</groupId>
@@ -38,6 +39,19 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-broker</artifactId>
+            <version>5.15.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-mqtt</artifactId>
+            <version>5.15.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
