--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <relativePath />
     </parent>
 	
-	<groupId>net.lr.reactive.component</groupId>
+	<groupId>org.apache.karaf.rcomp</groupId>
 	<artifactId>rcomp-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -101,7 +101,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>net.lr.reactive.component</groupId>
+				<groupId>org.apache.karaf.rcomp</groupId>
 				<artifactId>rcomp-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -140,7 +140,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -161,7 +160,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
 				<configuration>
 					<archive>
 						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
