--- a/rcomp-app/pom.xml
+++ b/rcomp-app/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.lr.reactive.component</groupId>
+		<groupId>org.apache.karaf.rcomp</groupId>
 		<artifactId>rcomp-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -15,27 +15,27 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>net.lr.reactive.component</groupId>
+			<groupId>org.apache.karaf.rcomp</groupId>
 			<artifactId>rcomp-api</artifactId>
 			<version>${rcomp.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>net.lr.reactive.component</groupId>
+			<groupId>org.apache.karaf.rcomp</groupId>
 			<artifactId>rcomp-eventadmin</artifactId>
 			<version>${rcomp.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>net.lr.reactive.component</groupId>
+			<groupId>org.apache.karaf.rcomp</groupId>
 			<artifactId>rcomp-mail</artifactId>
 			<version>${rcomp.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>net.lr.reactive.component</groupId>
+			<groupId>org.apache.karaf.rcomp</groupId>
 			<artifactId>rcomp-mqtt</artifactId>
 			<version>${rcomp.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>net.lr.reactive.component</groupId>
+			<groupId>org.apache.karaf.rcomp</groupId>
 			<artifactId>rcomp-examples</artifactId>
 			<version>${rcomp.version}</version>
 		</dependency>
