--- a/rcomp-examples/kafka-appender/pom.xml
+++ b/rcomp-examples/kafka-appender/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.lr.reactive.component</groupId>
+        <groupId>org.apache.karaf.rcomp</groupId>
         <artifactId>rcomp-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
@@ -36,14 +36,12 @@
             <version>0.11.0.0</version>
         </dependency>
         <dependency>
-            <groupId>net.lr.reactive.component</groupId>
+            <groupId>org.apache.karaf.rcomp</groupId>
             <artifactId>rcomp-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
-            <version>3.0.7.RELEASE</version>
         </dependency>
     </dependencies>
 
