--- a/rcomp-examples/pom.xml
+++ b/rcomp-examples/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.lr.reactive.component</groupId>
+        <groupId>org.apache.karaf.rcomp</groupId>
         <artifactId>rcomp-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
