--- a/rcomp-examples/rcomp-examples/pom.xml
+++ b/rcomp-examples/rcomp-examples/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.lr.reactive.component</groupId>
+        <groupId>org.apache.karaf.rcomp</groupId>
         <artifactId>rcomp-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
@@ -15,7 +15,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.lr.reactive.component</groupId>
+            <groupId>org.apache.karaf.rcomp</groupId>
             <artifactId>rcomp-api</artifactId>
         </dependency>
         <dependency>
