--- a/rcomp-mail/pom.xml
+++ b/rcomp-mail/pom.xml
@@ -20,14 +20,14 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>net.lr.reactive.component</groupId>
+        <groupId>org.apache.karaf.rcomp</groupId>
         <artifactId>rcomp-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>rcomp-mail</artifactId>
     <dependencies>
         <dependency>
-            <groupId>net.lr.reactive.component</groupId>
+            <groupId>org.apache.karaf.rcomp</groupId>
             <artifactId>rcomp-api</artifactId>
         </dependency>
         <dependency>
