Add camel bridge as reactive component

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<module>rcomp-examples</module>
 		<module>rcomp-app</module>
 		<module>rcomp-features</module>
+		<module>rcomp-camel</module>
 	</modules>
 
 	<pluginRepositories>
@@ -101,6 +102,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.10.19</version>
 		</dependency>
 	</dependencies>
 
