--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
+.DS_store
 target
 .settings
 .classpath
@@ -28,4 +28,3 @@ target
 paho*
 generated
 cnf
-
